--- a/BlazorAppFullStack/Components/Layout/MainLayout.razor
+++ b/BlazorAppFullStack/Components/Layout/MainLayout.razor
@@ -60,10 +60,10 @@
     {
         navItems = new List<NavItem>
                    {
-                       new NavItem { Id = "1", Href = "/", IconName = IconName.HouseDoorFill, Text = "Home", Match=NavLinkMatch.All},
-                       new NavItem { Id = "2", Href = "/counter", IconName = IconName.PlusSquareFill, Text = "Counter"},
-                       new NavItem { Id = "3", Href = "/weather", IconName = IconName.Pen, Text = "Fetch Data"},
-                       new NavItem { Id = "3", Href = "/patients", IconName = IconName.HospitalFill, Text = "Patient Data"},
+                       new NavItem { Id = "1", Href = "/", IconName = IconName.HouseDoorFill, Text = "Patients Data", Match=NavLinkMatch.All},
+                       // new NavItem { Id = "2", Href = "/counter", IconName = IconName.PlusSquareFill, Text = "Counter"},
+                       // new NavItem { Id = "3", Href = "/weather", IconName = IconName.Pen, Text = "Fetch Data"},
+                       // new NavItem { Id = "3", Href = "/patients", IconName = IconName.HospitalFill, Text = "Patient Data"},
                    };
 
         return navItems;
