--- a/BlazorAppFullStack/Components/Pages/PatientPages/Delete.razor
+++ b/BlazorAppFullStack/Components/Pages/PatientPages/Delete.razor
@@ -18,28 +18,40 @@
     }
     else {
         <dl class="row">
+            <dt class="col-sm-2">First Name</dt>
+            <dd class="col-sm-10">@patient.Name.FirstName</dd>
+        </dl>
+        <dl class="row">
+            <dt class="col-sm-2">Middle Name</dt>
+            <dd class="col-sm-10">@patient.Name.MiddleName</dd>
+        </dl>
+        <dl class="row">
+            <dt class="col-sm-2">Last Name</dt>
+            <dd class="col-sm-10">@patient.Name.LastName</dd>
+        </dl>
+        <dl class="row">
             <dt class="col-sm-2">DateOfBirth</dt>
             <dd class="col-sm-10">@patient.DateOfBirth</dd>
         </dl>
         <dl class="row">
             <dt class="col-sm-2">Street1</dt>
-            <dd class="col-sm-10">@patient.Street1</dd>
+            <dd class="col-sm-10">@patient.Address.Street1</dd>
         </dl>
         <dl class="row">
             <dt class="col-sm-2">Street2</dt>
-            <dd class="col-sm-10">@patient.Street2</dd>
+            <dd class="col-sm-10">@patient.Address.Street2</dd>
         </dl>
         <dl class="row">
             <dt class="col-sm-2">City</dt>
-            <dd class="col-sm-10">@patient.City</dd>
+            <dd class="col-sm-10">@patient.Address.City</dd>
         </dl>
         <dl class="row">
             <dt class="col-sm-2">State</dt>
-            <dd class="col-sm-10">@patient.State</dd>
+            <dd class="col-sm-10">@patient.Address.State</dd>
         </dl>
         <dl class="row">
             <dt class="col-sm-2">ZipCode</dt>
-            <dd class="col-sm-10">@patient.ZipCode</dd>
+            <dd class="col-sm-10">@patient.Address.ZipCode</dd>
         </dl>
         <EditForm method="post" Model="patient" OnValidSubmit="DeletePatient" FormName="delete" Enhance>
             <button type="submit" class="btn btn-danger" disabled="@(patient is null)">Delete</button> |
