--- a/BlazorAppFullStack/Components/Pages/PatientPages/Index.razor
+++ b/BlazorAppFullStack/Components/Pages/PatientPages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/patients"
+﻿@page "/"
 @using Microsoft.AspNetCore.Components.QuickGrid
 @inject BlazorAppFullStack.Data.BlazorAppFullStackContext DB
 @using BlazorAppFullStack.Models
@@ -14,15 +14,15 @@
 </p>
 
 <QuickGrid Class="table" Items="DB.Patient" Pagination="@pagination">
-    <PropertyColumn Title="First Name" Property="patient => patient.Name.FirstName" />
-    <PropertyColumn Title="Middle Name" Property="patient => patient.Name.MiddleName" />
-    <PropertyColumn Title="Last Name" Property="patient => patient.Name.LastName" />
+    <PropertyColumn Title="First Name" Property="patient => patient.Name.FirstName" Sortable="true" />
+    <PropertyColumn Title="Middle Name" Property="patient => patient.Name.MiddleName" Sortable="true" />
+    <PropertyColumn Title="Last Name" Property="patient => patient.Name.LastName" Sortable="true" />
     <PropertyColumn Title="DOB" Property="patient => patient.DateOfBirth" />
-    <PropertyColumn Title="Address" Property="patient => patient.Street1" />
-    <PropertyColumn Title="" Property="patient => patient.Street2" />
-    <PropertyColumn Title="City" Property="patient => patient.City" />
-    <PropertyColumn Title="State" Property="patient => patient.State" />
-    <PropertyColumn Title="Zip Code" Property="patient => patient.ZipCode" />
+    <PropertyColumn Title="Address" Property="patient => patient.Address.Street1" />
+    <PropertyColumn Title="" Property="patient => patient.Address.Street2" />
+    <PropertyColumn Title="City" Property="patient => patient.Address.City" Sortable="true" />
+    <PropertyColumn Title="State" Property="patient => patient.Address.State" Sortable="true" />
+    <PropertyColumn Title="Zip Code" Property="patient => patient.Address.ZipCode" Sortable="true" />
 
     <TemplateColumn Context="patient">
         <a href="@($"patients/edit?id={patient.Id}")"><i class="bi bi-pencil-square"></i></a> |
